Added methods for getting starting and ending date for a poll, included that in the str representation of the poll

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,5 @@
-# add documentation
+# implement date function in poll class
+# implement average function in analyse_polls
+# add documentation to update
+# add documentation to pollster class
 # Licensing?
