Added a few tests

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 # add tests to the poll class
-# implement a way of creating pollster class instance using pollster name
+# implement a way of creating pollster class instance using pollster name?
 # implement average function in analyse_polls
 # add documentation to update
 # add documentation to pollster class
